Tests/CompilerTests/negative/missing-semicolon.expected
negative/missing-semicolon.hylo:4.9: error: consecutive statements on the same line must be separated by ';'
  return return
        ^
